--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -7,7 +7,7 @@ plugins {
 
 android {
     namespace = "com.dizayn3r.dgauge_flutter_example"
-    compileSdk = 35
+    compileSdk = 36
     ndkVersion = "26.1.10909125"
 
     compileOptions {
@@ -25,7 +25,7 @@ android {
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = 21
-        targetSdk = 35
+        targetSdk = 36
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
@@ -44,8 +44,9 @@ flutter {
 }
 
 dependencies {
-    implementation(name: 'dguage_display_android_sdk-1.0.0', ext: 'aar')
-    implementation project(path: ':dgauge_flutter')
+    implementation 'org.bitbucket.treel-sdk:dguage_display_android_sdk:1.0.0'
+//    implementation(name: 'dguage_display_android_sdk-1.0.0', ext: 'aar')
+//    implementation project(path: ':dgauge_flutter')
 
     // RxJava and RxAndroid
     implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
