refactor: Update Android package name
This commit updates the Android package name for the plugin and the example app from `com.dizayn3r.dgauge_flutter` to `com.applore.dgauge_flutter`.

**Specific Changes:**
- Updated the `group` and `namespace` in the plugin's `android/build.gradle`.
- Renamed the Kotlin source directories from `com/dizayn3r` to `com/applore`.
- Updated the `package` declaration in all Kotlin source files.
- Changed the `package` in `android/src/main/AndroidManifest.xml`.
- Updated the `namespace` and `applicationId` in the example app's `example/android/app/build.gradle`.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,4 @@
-group = "com.dizayn3r.dgauge_flutter"
+group = "com.applore.dgauge_flutter"
 version = "1.0-SNAPSHOT"
 
 buildscript {
@@ -41,7 +41,7 @@ apply plugin: "kotlin-android"
 
 android {
     if (project.android.hasProperty("namespace")) {
-        namespace = "com.dizayn3r.dgauge_flutter"
+        namespace = "com.applore.dgauge_flutter"
     }
 
     compileSdk = 35
