``` feat: Upgrade Android SDK and enhance native functionality
This commit upgrades the native Android DGauge SDK, enhances data handling, and introduces new functionality for a more robust and feature-rich plugin.

### Key Changes:

**1. Android SDK and Build Configuration (`android/build.gradle`):**
- Upgraded the DGauge Android SDK from version `1.0.0` to `1.0.3`.
- Updated the Android `compileSdk` and `targetSdk` from `35` to `36`.
- Removed commented-out code related to local dependencies (`flatDir`).

**2. Robust Data Handling (`DGaugeUtils.kt`):**
- Implemented a `cleanString` helper to safely normalize incoming data, converting `null` and string literals like `"null"` to an empty string.
- Refactored the `toVehicleConfig` function to be more defensive against unexpected data types from Flutter.
- Improved parsing for numeric and list-based fields, ensuring the app handles malformed or `null` data gracefully without crashing.
- Added support for alternate key names (`tireNumber` for `tyreNumber`, `vehicleNo` for `vehicleNumber`).

**3. Enhanced Native Plugin Functionality (`DGaugeFlutterPlugin.kt`):**
- **Get Vehicle Configuration:** Added a new `getVehicleConfiguration` method to read the existing configuration from the DGauge device.
- **New Event Callback:** Implemented the `onDGuageConfiguredVehicle` callback to receive the vehicle number from the device.
- **Improved Logging:** The response from `sendVehicleAndTyreConfigurations` is now logged for better debugging.
- **Commented Out Events:** The custom `inspectionLiveData` and `inspectionAllData` events have been temporarily commented out to rely on the SDK's standard backward-compatible events.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -24,9 +24,6 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-//        flatDir {
-//            dirs("$projectDir/libs")
-//        }
         maven {
             url "https://jitpack.io"
             credentials {
@@ -44,7 +41,7 @@ android {
         namespace = "com.applore.dgauge_flutter"
     }
 
-    compileSdk = 35
+    compileSdk = 36
     ndkVersion = "26.1.10909125"
 
     compileOptions {
@@ -67,14 +64,8 @@ android {
 
     defaultConfig {
         minSdk = 21
-        targetSdk = 35
+        targetSdk = 36
     }
-
-//    dependencies {
-//        testImplementation("org.jetbrains.kotlin:kotlin-test")
-//        testImplementation("org.mockito:mockito-core:5.0.0")
-//        implementation 'org.bitbucket.treel-sdk:dguage_display_android_sdk:1.0.0'
-//    }
 
     testOptions {
         unitTests.all {
@@ -90,9 +81,6 @@ android {
 }
 
 dependencies {
-    implementation 'org.bitbucket.treel-sdk:dguage_display_android_sdk:1.0.0'
-    // Include the AAR directly
-//    compileOnly files("libs/dguage_display_android_sdk-1.0.0.aar")
-    // Use compatible androidx.core version
-    implementation("androidx.core:core-ktx:1.16.0") // Compatible version
+    implementation 'org.bitbucket.treel-sdk:dguage_display_android_sdk:1.0.3'
+    implementation("androidx.core:core-ktx:1.16.0")
 }
